--- a/systemnotes.tex
+++ b/systemnotes.tex
@@ -312,12 +312,17 @@ Higher-level openings & natural. \\
 	\begin{itemize}
    \item 1$\spadesuit$ = forcing enquiry.
 		\begin{itemize}
-      \item 1NT = both majors. Continuations as after artificial 1NT opening \xref{sec:resp:1nart}.
+      \item 1NT = both majors, minimum. Continuations as after artificial 1NT opening \xref{sec:resp:1nart}.
+      \item 2$\clubsuit$ = 5+ spades and 4+ clubs, some extras
+      \item 2$\diamondsuit$ = 5+ spades and 4+ diamonds, some extras
+      \item 2$\heartsuit$ = both majors, maximum
+		\item 2$\spadesuit$ = 5+ spades, minimum
+		\item 2NT = 6+ spades, no outside suit, maximum
 		\end{itemize}
-   \item 1NT = non-forcing.
+   \item 1NT = non-forcing, any negative without spades
    \item 2$\clubsuit$/$\diamondsuit$ = natural, forcing.
    \item 2$\heartsuit$ = GF+ raise, neither or both of $\spadesuit$ AK.
-   \item 2$\spadesuit$/3$\spadesuit$/4$\spadesuit$ = limit raises/to play.
+   \item 2$\spadesuit$/3$\spadesuit$/4$\spadesuit$ = to play/limit raise/to play.
    \item 2NT = good raise, with exactly one of $\spadesuit$ AK \xref{sec:enc:2way}.
 		\begin{itemize}
       \item Next bid shows 0/1 loser and the $\spadesuit$ K, or 2/3 losers and the SA.
