updates to card

--- a/systemnotes.tex
+++ b/systemnotes.tex
@@ -155,7 +155,10 @@ elsewhere in this document will be given as \xref{sec:resp:2level}.
 \subsubsection{1 level}
 \label{sec:open:1level}
 
-Responses in Section \ref{sec:resp:1level}.
+Responses in Section \ref{sec:resp:1level}. When playing in an event with fewer
+than seven boards in a round, strike out the differences based on position and
+vulnerability, the vulnerable meanings apply at all positions and
+vulnerabilities.
 
 \begin{tabular}{ll}
 1$\clubsuit$  & 12--15 balanced or 10--15 unbalanced, no five-card major and at most\\
@@ -342,7 +345,7 @@ Higher-level openings & natural. \\
    \item 2$\heartsuit$/$\spadesuit$: preference, to play.
    \item 2NT: forcing enquiry:
 		\begin{itemize}
-      \item 3$\clubsuit$/$\diamondsuit$ strong, 3$\heartsuit$/$\spadesuit$ weak. 3$\clubsuit$/$\heartsuit$ better $\heartsuit$, 3$\diamondsuit$/$\spadesuit$ better $\spadesuit$.
+      \item 3$\clubsuit$/$\diamondsuit$ weak, 3$\heartsuit$/$\spadesuit$ strong. 3$\clubsuit$/$\heartsuit$ better $\heartsuit$, 3$\diamondsuit$/$\spadesuit$ better $\spadesuit$.
 		\end{itemize}
    \item 3$\clubsuit$/$\diamondsuit$: strong, good suit.
    \item 3$\heartsuit$/$\spadesuit$: good raise.
@@ -494,14 +497,17 @@ depending on range.
 
 \begin{itemize}
 
+\item 2$\clubsuit$ is 5-card puppet Keri, which allows the system to be used with weak diamond hands with tolerance for at least one major (e.g. 4=0=6=3 pattern with very limited values).
+
 \item 2$\diamondsuit$ and 2$\heartsuit$ are transfers; transfer breaks apply with any 4-card fit.  2NT
 shows 4/5-card support, no side 4-card suit, and a maximum.  Other suits
 show 4 cards, and 4-card support with a maximum.  A simple jump acceptance
 shows 4-card support and a minimum.
 
-\item 2$\spadesuit$ is a range enquiry/transfer to $\clubsuit$.  2NT shows a minimum, after which 3$\clubsuit$ is to
-play and other bids are GF, either cues or Swiss.  3$\clubsuit$ shows any maximum, and
-can be passed if 2$\spadesuit$ was weak takeout.
+\item 2$\spadesuit$ is a range enquiry/transfer to $\clubsuit$.  2NT shows a
+minimum, after which 3$\clubsuit$ is to play and other bids are GF, first round
+cues.  3$\clubsuit$ shows any maximum, and can be passed if 2$\spadesuit$ was
+weak takeout.
 
 \item 2NT is a transfer to diamonds; 3$\clubsuit$ is the only available super-accept.
 
@@ -512,11 +518,10 @@ pass, or bid 3NT with (e.g.) Kxx in the suit.
 
 \item 3$\heartsuit$/3$\spadesuit$ are slam tries in clubs and diamonds.
 
-\item 4$\clubsuit$/4$\diamondsuit$ are General Swiss  \xref{sec:swiss}.
+\item 4$\clubsuit$/4$\diamondsuit$ are General Swiss \xref{sec:swiss}.
 
 \item 4N is Blackwood \xref{sec:blackwood}.
 
-\item 2$\clubsuit$ is where it gets distinctive.  This is 5-card modified puppet Keri, which allows the system to be used with weak diamond hands with tolerance for at least one major (e.g. 4=0=6=3 pattern with very limited values).
 \end{itemize}
 
 \paragraph{Responses to 5-card puppet Keri}
@@ -583,7 +588,7 @@ We play a modified form of suction as the escape after 1NT-X.
 		\item 2$\diamondsuit$ with $\diamondsuit$\&$\heartsuit$
 		\end{itemize}
 	\end{itemize}
-\item 2$\clubsuit$ forces 2$\diamondsuit$, weak with diamonds or the majors
+\item 2$\clubsuit$ puppets 2$\diamondsuit$, weak with diamonds or the majors
 	\begin{itemize}
 	\item Pass with 5 clubs
 	\item 2$\diamondsuit$ with all other hands
@@ -592,12 +597,12 @@ We play a modified form of suction as the escape after 1NT-X.
 		\item 2$\heartsuit$ with the majors
 		\end{itemize}
 	\end{itemize}
-\item 2$\diamondsuit$ forces 2$\heartsuit$, weak with hearts
+\item 2$\diamondsuit$ puppets 2$\heartsuit$, weak with hearts
 	\begin{itemize}
 	\item Pass with 5 diamonds
 	\item 2$\heartsuit$ all other hands
 	\end{itemize}
-\item 2$\heartsuit$ forces 2$\spadesuit$, weak with spades
+\item 2$\heartsuit$ puppets 2$\spadesuit$, weak with spades
 	\begin{itemize}
 	\item Pass with 5 hearts
 	\item 2$\spadesuit$ all other hands
@@ -731,8 +736,6 @@ and the king of the agreed suit. Responses are:
 
 Bids at the 5 level are exclusion blackwood. Responses are for keycards outside
 the suit bid, starting at the next bid.
-
-\newpage
 
 \subsection{Blackwood}
 \label{sec:blackwood}
@@ -1009,7 +1012,8 @@ Doubles of freely bid slams are Lightner, asking for the lead of dummy's first s
 
 \item 1$\clubsuit$-(P)-1$\diamondsuit$-(anything): it's a good idea to subside quietly.  
 
-\item 1$\clubsuit$-(P)-1$\heartsuit$-(anything): passes are non-forcing. 
+\item 1$\clubsuit$/$\diamondsuit$-(P)-1$\heartsuit$-(anything): passes are non-forcing, X is takeout / suction
+\item 1NT (majors)-(anything): double is for penalties, cue bid is a forcing enquiry
 \end{itemize}
 
 \subsubsection{Interference over a 2-level opening}
