more swiss detail

--- a/systemnotes.tex
+++ b/systemnotes.tex
@@ -805,6 +805,10 @@ outside singletons for kings, but care must be taken to avoid double-counting.
 	\end{itemize}
 \end{itemize}
 
+While cueing kings/singletons, 4NT shows a singleton or king which can't be
+shown below 5 of the trump suit (usually diamonds over clubs) and asks partner
+to signoff appropriately whether they have duplication.
+
 If you find duplication in kings/singletons subtract one CP and sign off at the
 appropriate level. If your partner signs off and you have 2 unshown CPs so far,
 raise one level.
