more updates to the notes

--- a/systemnotes.tex
+++ b/systemnotes.tex
@@ -265,6 +265,9 @@ Higher-level openings & natural. \\
 			\begin{itemize}
 			\item Responder will bid the next suit (relay). Opener then rebids NT with the
 				single-suited hand, or a suit with the two-suited option.
+			\item After GF+ suit agreement with a 3-suiter, 3N by opener shows no wish to make
+				a slam try. Bidding the short suit shows a void and bidding a long suit shows
+				a significantly better suit.
 			\end{itemize}
       \item Jump suit rebids are GF, single-suited.
       \item 2NT rebid = 20--23 balanced; see ``Continuations after 2NT" \xref{sec:resp:2n}.
@@ -503,6 +506,15 @@ depending on range.
 shows 4/5-card support, no side 4-card suit, and a maximum.  Other suits
 show 4 cards, and 4-card support with a maximum.  A simple jump acceptance
 shows 4-card support and a minimum.
+
+After the transfer is doubled:
+
+	\begin{itemize}
+	\item Pass: 2 cards in support, minimum
+	\item Redouble: 2-3 cards in support, maximum
+	\item Complete: 3 cards in support, minimum
+	\item Normal transfer breaks: 4+ cards in support
+	\end{itemize}
 
 \item 2$\spadesuit$ is a range enquiry/transfer to $\clubsuit$.  2NT shows a
 minimum, after which 3$\clubsuit$ is to play and other bids are GF, first round
@@ -823,30 +835,34 @@ from all numbers.
 We tried an artificial overcall scheme but found it couldn't cope with a number of situations.
 Therefore, we have a fairly natural overcall style.
 
-Simple overcalls are constructive and natural. In response, if 1N is available,
-then 2N is a crypto raise. In all cases a responsive cue is a good raise and direct
-raises are preemptive.
+\subsection{Natural suits}
+\label{sec:def:1x}
 
-Double is standard takeout (or a strong hand).
+Simple overcalls are constructive and natural 5 cards, starting at
+10HCP~\orange{11N2}. In response, if 1N is available, then 2N is a crypto
+raise. In all cases a responsive cue is a good raise and direct raises are
+preemptive.
 
-Direct 1NT is 15-17 balanced with a stop, protective 1NT is 11-14 with a stop. 
-After these ``Continuations after 1NT'' apply. 
+Double is standard takeout (or a strong hand)~\orange{11N3}.
 
-Jump overcalls are weak; jump overcalls of a major suit over a minor-suit
-opening may include the other minor (possible canape).  Similarly, jump
-overcalls of 3$\clubsuit$ over a 1 of a major opening could include $\diamondsuit$.
+Direct 1NT is 15-17 balanced with a stop or semi-balanced and may contain a
+singleton ace~\orange{11N8}, protective 1NT is 11-14 with a stop. 
+After these ``Continuations after 1NT''~\xref{sec:resp:1n} apply. 
 
-In pass-out seat jump overcalls are intermediate. Also, after the sequence
-(Pass)-Pass-(1N).
+Jump overcalls are weak, showing a 6 card suit and between 4HCP (favourable)
+and enough to make a simple overcall. In protective they are intermediate
+(11-15, reasonable 6+ card suit). Also, after the sequence (Pass)-Pass-(1N).
 
-Jump cuebids are stopper-asking for 3NT \orange{11N10}; they promise a long running suit.  An
-overcall of 3NT promises a long running suit and a stopper.
+Jump cuebids are stopper-asking for 3NT \orange{11N17}; they promise a long
+running suit.  An overcall of 3NT promises a long running suit and a stopper.
+Responses are the same as a gambling 3NT opening~\xref{sec:resp:higher}.
+
 
 Simple cuebids are Michaels showing at least 5--5 in the majors (over a minor)
 or the other major and either minor (over a major) \orange{11N7}. In all cases they are
 either weak or strong. Similarly, 2NT over a 1 level bid is unusual, showing
 5--5 or better in the minors (over a major) or the other minor and either major
-(over a minor) \orange{11N7}. Again, it's weak or strong.
+(over a minor) \orange{11N9}. Again, it's weak or strong.
 
 After Michaels or Unusual, bidding any of the suits which could have been shown
 is pass or correct at that level. Overcaller then corrects to the next highest
@@ -875,7 +891,7 @@ For example:
 \subsection{Defences}
 \label{sec:defences}
 
-These are mostly all based on suction:
+Aside from defences to natural suit openings, these are mostly all based on suction:
 
 \begin{itemize}
 \item clubs: diamonds or the majors
@@ -925,6 +941,13 @@ are Lebensohl responses \xref{sec:resp:lebensohl}. 4N is takeout over 4$\spadesu
 
 Over a weak two,  2NT is natural showing 16-18 and ``Continuations after 2NT'' \xref{sec:resp:2n}
 apply.
+
+\subsubsection{Natural stronger jump openings}
+\label{sec:def:inter-strong}
+
+Natural 2-level openings which are not forcing (intermediate/strong-non-forcing) the overcalls
+are as natural 1-level openings~\xref{sec:def:1x}, with 2N as modified unusual. All actions
+need to be sounder than over a 1-level opening.
 
 \subsubsection{Lightner Doubles}
 \label{sec:def:lightner}
@@ -1017,7 +1040,23 @@ Doubles of freely bid slams are Lightner, asking for the lead of dummy's first s
 \item 1$\clubsuit$-(P)-1$\diamondsuit$-(anything): it's a good idea to subside quietly.  
 
 \item 1$\clubsuit$/$\diamondsuit$-(P)-1$\heartsuit$-(anything): passes are non-forcing, X is takeout / suction
+
+\item 1$\clubsuit$-(P)-1$\heartsuit$-(1$\spadesuit$)-P: 12-15 balanced without a spade stop. Responses:
+	\begin{itemize}
+	\item 1NT: Lebensohl
+		\begin{itemize}
+		\item 2x: invitational
+		\item 2$\spadesuit$: stayman with a stop
+		\end{itemize}
+	\item 2x: weak
+	\item 2$\spadesuit$: stayman without a stop
+	\item 2NT: invitational with a stop
+	\item 3x: forcing
+	\item 3NT: to play, shows a stop
+	\end{itemize}
+
 \item 1NT (majors)-(anything): double is for penalties, cue bid is a forcing enquiry
+
 \end{itemize}
 
 \subsubsection{Interference over a 2-level opening}
